--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Cassiora Traiteur</title>
+    <meta name="application-name" content="Cassiora Traiteur">
+    <meta name="apple-mobile-web-app-title" content="Cassiora Traiteur">
+    <meta property="og:title" content="Cassiora Traiteur">
+    <meta name="description" content="Traiteur élégant et généreux : buffets froids, cocktails dînatoires, box gourmandes et ateliers.">
   </head>
   <body>
     <div id="root"></div>
